add：使用SecurityManager限制用户的权限